// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Overview container should render with a full access type 1`] = `
<DocumentFragment>
  <div
    class="white-background-accommodate-footer premium-hub-overview"
  >
    <div
      class="container"
    >
      <div
        class="quill-snackbar "
      />
      <h1>
        Hello, A!
      </h1>
      <p
        class="subheader"
      >
        Thanks for being an admin of 
        <b>
          A Real Middle School
        </b>
        .
      </p>
      <section
        class="snapshot-section-wrapper overview-section-wrapper"
      >
        <h2>
          <img
            alt=""
            src="undefined/images/pages/administrator/overview/bulb.svg"
          />
          <span>
            Usage Highlights
          </span>
        </h2>
        <div
          class="snapshot-section highlights overview-section"
        >
          <div
            class="snapshot-section-content overview-section-content"
          >
            <div
              class="counts"
            >
              <section
                class="snapshot-item snapshot-count medium no-change"
              >
                <div
                  class="count-and-label"
                >
                  <span
                    class="count"
                  >
                    —
                  </span>
                  <span
                    class="snapshot-label"
                  >
                    Sentences written
                    <span
                      class="label-sub-text"
                    >
                      This school year
                    </span>
                  </span>
                </div>
                <div
                  class="change"
                >
                  <span />
                </div>
              </section>
              <section
                class="snapshot-item snapshot-count medium no-change"
              >
                <div
                  class="count-and-label"
                >
                  <span
                    class="count"
                  >
                    —
                  </span>
                  <span
                    class="snapshot-label"
                  >
                    Student learning hours
                    <span
                      class="label-sub-text"
                    >
                      This school year
                    </span>
                  </span>
                </div>
                <div
                  class="change"
                >
                  <span />
                </div>
              </section>
            </div>
          </div>
        </div>
      </section>
      <section
        class="overview-section-wrapper professional-development"
      >
        <h2>
          <img
            alt=""
            src="undefined/images/pages/administrator/overview/students.svg"
          />
          <span>
            Professional Development and Support
          </span>
        </h2>
        <div
          class="overview-section"
        >
          <div
            class="professional-learning-manager"
          >
            <div
              class="loading-spinner"
            >
              <div
                class="spinner-container"
              >
                <img
                  alt="Loading spinner"
                  class="spinner"
                  src="https://assets.quill.org/images/icons/loader_still.svg"
                />
              </div>
            </div>
          </div>
          <div
            class="quick-links"
          >
            <h3>
              Quick Links
            </h3>
            <a
              href="https://support.quill.org/en/articles/1588988-how-do-i-navigate-the-premium-hub"
              rel="noopener noreferrer"
              target="_blank"
            >
              Premium Hub User Guide
            </a>
            <a
              href="https://docsend.com/view/9r6gzp5v8w5ky6w9"
              rel="noopener noreferrer"
              target="_blank"
            >
              Live Training Guide
            </a>
            <a
              href="/quill_academy"
              rel="noopener noreferrer"
              target="_blank"
            >
              Quill Academy
            </a>
            <a
              href="/teacher-center"
              rel="noopener noreferrer"
              target="_blank"
            >
              Teacher Center
            </a>
            <a
              href="mailto:support@quill.org"
              rel="noopener noreferrer"
              target="_blank"
            >
              Contact Support
            </a>
            <a
              href="https://quillorg.canny.io/admin-feedback"
              rel="noopener noreferrer"
              target="_blank"
            >
              Request a Feature
            </a>
          </div>
        </div>
      </section>
      <section
        class="overview-section-wrapper account-management"
      >
        <h2>
          <img
            alt=""
            src="undefined/images/pages/administrator/overview/pencil.svg"
          />
          <span>
            Account Management
          </span>
        </h2>
        <div
          class="overview-section"
        >
          <div
            class="overview-section-content"
          >
            <div
              class="tile"
            >
              <div>
                <h3>
                  Manage Accounts
                </h3>
                <p>
                  Create new accounts, manage admins, and more.
                </p>
              </div>
              <div
                class="link-and-image"
              >
                <a
                  class="quill-button focus-on-light outlined secondary medium"
                  href="/teachers/premium_hub/account_management"
                >
                  Manage accounts
                </a>
                <img
                  alt=""
                  src="undefined/images/pages/administrator/overview/manage-accounts.svg"
                />
              </div>
            </div>
            <div
              class="tile"
            >
              <div>
                <h3>
                  Log in as a teacher
                </h3>
                <p>
                  Access each teacher’s account to assign activities, manage rosters, and view data.
                </p>
              </div>
              <div
                class="link-and-image"
              >
                <button
                  class="quill-button focus-on-light outlined secondary medium"
                  type="button"
                >
                  Log in as a teacher
                </button>
                <img
                  alt=""
                  src="undefined/images/pages/administrator/overview/log-in-as-a-teacher.svg"
                />
              </div>
            </div>
            <div
              class="tile"
            >
              <div>
                <h3>
                  Manage Subscriptions
                </h3>
                <p>
                  View subscription history, manage subscriptions, and more.
                </p>
              </div>
              <div
                class="link-and-image"
              >
                <a
                  class="quill-button focus-on-light outlined secondary medium"
                  href="/teachers/premium_hub/school_subscriptions"
                >
                  Manage subscriptions
                </a>
                <img
                  alt=""
                  src="undefined/images/pages/administrator/overview/manage-subscriptions.svg"
                />
              </div>
            </div>
          </div>
        </div>
      </section>
      <section
        class="overview-section-wrapper premium-reports"
      >
        <h2>
          <img
            alt=""
            src="undefined/images/pages/administrator/overview/bar-graph-increasing-black.svg"
          />
          <span>
            Premium Reports
          </span>
        </h2>
        <div
          class="overview-section"
        >
          <div
            class="overview-section-content"
          >
            <div
              class="tile new"
            >
              <div>
                <h3>
                  Usage Snapshot Report
                  <span
                    class="new-tag"
                  >
                    NEW
                  </span>
                </h3>
                <p>
                  Key insights to help you succeed. View most assigned activities, average activities completed, and more.
                </p>
              </div>
              <div
                class="link-and-image"
              >
                <a
                  class="quill-button focus-on-light outlined secondary medium"
                  href="/teachers/premium_hub/usage_snapshot_report"
                >
                  View report
                </a>
                <img
                  alt=""
                  src="undefined/images/pages/administrator/overview/usage-snapshot-report.svg"
                />
              </div>
            </div>
            <div
              class="tile new"
            >
              <div>
                <h3>
                  Diagnostic Growth Report
                  <span
                    class="new-tag"
                  >
                    NEW
                  </span>
                </h3>
                <p>
                  Get a detailed breakdown of Quill’s impact on students’ growth. View data by skill, student, and more.
                </p>
              </div>
              <div
                class="link-and-image"
              >
                <a
                  class="quill-button focus-on-light outlined secondary medium"
                  href="/teachers/premium_hub/diagnostic_growth_report"
                >
                  View report
                </a>
                <img
                  alt=""
                  src="undefined/images/pages/administrator/overview/diagnostic-growth-report.svg"
                />
              </div>
            </div>
            <div
              class="tile new"
            >
              <div>
                <h3>
                  Data Export
                  <span
                    class="new-tag"
                  >
                    NEW
                  </span>
                </h3>
                <p>
                  Download a file containing all activities completed by students. Includes score, time spent, and more.
                </p>
              </div>
              <div
                class="link-and-image"
              >
                <a
                  class="quill-button focus-on-light outlined secondary medium"
                  href="/teachers/premium_hub/data_export"
                >
                  View report
                </a>
                <img
                  alt=""
                  src="undefined/images/pages/administrator/overview/data-export.svg"
                />
              </div>
            </div>
            <div
              class="tile "
            >
              <div>
                <h3>
                  Concepts Report
                </h3>
                <p>
                  View the number of times a student correctly or incorrectly used a targeted concept.
                </p>
              </div>
              <div
                class="link-and-image"
              >
                <a
                  class="quill-button focus-on-light outlined secondary medium"
                  href="/teachers/premium_hub/district_concept_reports"
                >
                  View report
                </a>
                <img
                  alt=""
                  src="undefined/images/pages/administrator/overview/concepts-report.svg"
                />
              </div>
            </div>
            <div
              class="tile "
            >
              <div>
                <h3>
                  Activity Scores Report
                </h3>
                <p>
                  View the overall average score for each student per class.
                </p>
              </div>
              <div
                class="link-and-image"
              >
                <a
                  class="quill-button focus-on-light outlined secondary medium"
                  href="/teachers/premium_hub/district_activity_scores"
                >
                  View report
                </a>
                <img
                  alt=""
                  src="undefined/images/pages/administrator/overview/activity-scores-report.svg"
                />
              </div>
            </div>
            <div
              class="tile "
            >
              <div>
                <h3>
                  Standards Report
                </h3>
                <p>
                  View a school’s overall progress on each of the Common Core standards.
                </p>
              </div>
              <div
                class="link-and-image"
              >
                <a
                  class="quill-button focus-on-light outlined secondary medium"
                  href="/teachers/premium_hub/district_standards_reports"
                >
                  View report
                </a>
                <img
                  alt=""
                  src="undefined/images/pages/administrator/overview/standards-report.svg"
                />
              </div>
            </div>
          </div>
        </div>
      </section>
      <section
        class="overview-section-wrapper integrations"
      >
        <h2>
          <img
            alt=""
            src="undefined/images/pages/administrator/overview/checkbox-multiple.svg"
          />
          <span>
            Integrations
          </span>
        </h2>
        <div
          class="overview-section"
        >
          <div
            class="overview-section-content"
          >
            <div
              class="tile"
            >
              <div>
                <h3>
                  Canvas
                </h3>
                <p>
                  Make teaching at your school even more effective with our seamless Canvas integration.
                </p>
              </div>
              <div
                class="link-and-image"
              >
                <a
                  class="quill-button focus-on-light outlined secondary medium"
                  href="/teachers/premium_hub/integrations/canvas"
                >
                  Learn more
                </a>
                <img
                  alt=""
                  src="undefined/images/pages/administrator/overview/canvas.svg"
                />
              </div>
            </div>
            <div
              class="tile"
            >
              <div>
                <h3>
                  Google Classroom
                </h3>
                <p>
                  Make teaching at your school even more effective with our seamless Google Classroom integration.
                </p>
              </div>
              <div
                class="link-and-image"
              >
                <a
                  class="quill-button focus-on-light outlined secondary medium"
                  href="/teachers/premium_hub/integrations/google"
                >
                  Learn more
                </a>
                <img
                  alt=""
                  src="undefined/images/pages/administrator/overview/google-classroom.svg"
                />
              </div>
            </div>
            <div
              class="tile"
            >
              <div>
                <h3>
                  Clever
                </h3>
                <p>
                  Make teaching at your school even more effective with our seamless Clever integration.
                </p>
              </div>
              <div
                class="link-and-image"
              >
                <a
                  class="quill-button focus-on-light outlined secondary medium"
                  href="/teachers/premium_hub/integrations/clever"
                >
                  Learn more
                </a>
                <img
                  alt=""
                  src="undefined/images/pages/administrator/overview/clever.svg"
                />
              </div>
            </div>
          </div>
        </div>
      </section>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Overview container should render with a limited access type 1`] = `
<DocumentFragment>
  <div
    class="white-background-accommodate-footer premium-hub-overview"
  >
    <div
      class="container"
    >
      <div
        class="quill-snackbar "
      />
      <h1>
        Hello, A!
      </h1>
      <p
        class="subheader"
      >
        Thanks for being an admin of 
        <b>
          A Real Middle School
        </b>
        .
      </p>
      <section
        class="snapshot-section-wrapper overview-section-wrapper"
      >
        <h2>
          <img
            alt=""
            src="undefined/images/pages/administrator/overview/bulb.svg"
          />
          <span>
            Usage Highlights
          </span>
        </h2>
        <div
          class="snapshot-section highlights overview-section"
        >
          <div
            class="snapshot-section-content overview-section-content"
          >
            <div
              class="counts"
            >
              <section
                class="snapshot-item snapshot-count medium no-change"
              >
                <div
                  class="count-and-label"
                >
                  <span
                    class="count"
                  >
                    —
                  </span>
                  <span
                    class="snapshot-label"
                  >
                    Sentences written
                    <span
                      class="label-sub-text"
                    >
                      This school year
                    </span>
                  </span>
                </div>
                <div
                  class="change"
                >
                  <span />
                </div>
              </section>
              <section
                class="snapshot-item snapshot-count medium no-change"
              >
                <div
                  class="count-and-label"
                >
                  <span
                    class="count"
                  >
                    —
                  </span>
                  <span
                    class="snapshot-label"
                  >
                    Student learning hours
                    <span
                      class="label-sub-text"
                    >
                      This school year
                    </span>
                  </span>
                </div>
                <div
                  class="change"
                >
                  <span />
                </div>
              </section>
            </div>
          </div>
        </div>
      </section>
      <section
        class="overview-section-wrapper professional-development"
      >
        <h2>
          <img
            alt=""
            src="undefined/images/pages/administrator/overview/students.svg"
          />
          <span>
            Professional Development and Support
          </span>
        </h2>
        <div
          class="overview-section"
        >
          <div
            class="professional-learning-manager"
          >
            <div
              class="loading-spinner"
            >
              <div
                class="spinner-container"
              >
                <img
                  alt="Loading spinner"
                  class="spinner"
                  src="https://assets.quill.org/images/icons/loader_still.svg"
                />
              </div>
            </div>
          </div>
          <div
            class="quick-links"
          >
            <h3>
              Quick Links
            </h3>
            <a
              href="https://support.quill.org/en/articles/1588988-how-do-i-navigate-the-premium-hub"
              rel="noopener noreferrer"
              target="_blank"
            >
              Premium Hub User Guide
            </a>
            <a
              href="https://docsend.com/view/9r6gzp5v8w5ky6w9"
              rel="noopener noreferrer"
              target="_blank"
            >
              Live Training Guide
            </a>
            <a
              href="/quill_academy"
              rel="noopener noreferrer"
              target="_blank"
            >
              Quill Academy
            </a>
            <a
              href="/teacher-center"
              rel="noopener noreferrer"
              target="_blank"
            >
              Teacher Center
            </a>
            <a
              href="mailto:support@quill.org"
              rel="noopener noreferrer"
              target="_blank"
            >
              Contact Support
            </a>
            <a
              href="https://quillorg.canny.io/admin-feedback"
              rel="noopener noreferrer"
              target="_blank"
            >
              Request a Feature
            </a>
          </div>
        </div>
      </section>
      <section
        class="overview-section-wrapper account-management"
      >
        <h2>
          <img
            alt=""
            src="undefined/images/pages/administrator/overview/pencil.svg"
          />
          <span>
            Account Management
          </span>
        </h2>
        <div
          class="overview-section"
        >
          <div
            class="overview-section-content"
          >
            <div
              class="tile"
            >
              <div>
                <h3>
                  Manage Accounts
                </h3>
                <p>
                  Create new accounts, manage admins, and more.
                </p>
              </div>
              <div
                class="link-and-image"
              >
                <a
                  class="quill-button focus-on-light outlined secondary medium"
                  href="/teachers/premium_hub/account_management"
                >
                  Manage accounts
                </a>
                <img
                  alt=""
                  src="undefined/images/pages/administrator/overview/manage-accounts.svg"
                />
              </div>
            </div>
            <div
              class="tile"
            >
              <div>
                <h3>
                  Log in as a teacher
                </h3>
                <p>
                  Access each teacher’s account to assign activities, manage rosters, and view data.
                </p>
              </div>
              <div
                class="link-and-image"
              >
                <button
                  class="quill-button focus-on-light outlined secondary medium"
                  type="button"
                >
                  Log in as a teacher
                </button>
                <img
                  alt=""
                  src="undefined/images/pages/administrator/overview/log-in-as-a-teacher.svg"
                />
              </div>
            </div>
            <div
              class="tile"
            >
              <div>
                <h3>
                  Manage Subscriptions
                </h3>
                <p>
                  View subscription history, manage subscriptions, and more.
                </p>
              </div>
              <div
                class="link-and-image"
              >
                <a
                  class="quill-button focus-on-light outlined secondary medium"
                  href="/teachers/premium_hub/school_subscriptions"
                >
                  Manage subscriptions
                </a>
                <img
                  alt=""
                  src="undefined/images/pages/administrator/overview/manage-subscriptions.svg"
                />
              </div>
            </div>
          </div>
        </div>
      </section>
      <section
        class="overview-section-wrapper premium-reports"
      >
        <h2>
          <img
            alt=""
            src="undefined/images/pages/administrator/overview/bar-graph-increasing-black.svg"
          />
          <span>
            Premium Reports
          </span>
        </h2>
        <div
          class="overview-section"
        >
          <div
            class="overview-section-content"
          >
            <div
              class="tile new"
            >
              <div>
                <h3>
                  Usage Snapshot Report
                  <span
                    class="new-tag"
                  >
                    NEW
                  </span>
                </h3>
                <p>
                  Key insights to help you succeed. View most assigned activities, average activities completed, and more.
                </p>
              </div>
              <div
                class="link-and-image"
              >
                <a
                  class="quill-button focus-on-light outlined secondary medium"
                  href="/teachers/premium_hub/usage_snapshot_report"
                >
                  View report
                </a>
                <img
                  alt=""
                  src="undefined/images/pages/administrator/overview/usage-snapshot-report.svg"
                />
              </div>
            </div>
            <div
              class="tile new"
            >
              <div>
                <h3>
                  Diagnostic Growth Report
                  <span
                    class="new-tag"
                  >
                    NEW
                  </span>
                </h3>
                <p>
                  Get a detailed breakdown of Quill’s impact on students’ growth. View data by skill, student, and more.
                </p>
              </div>
              <div
                class="link-and-image"
              >
                <a
                  class="quill-button focus-on-light outlined secondary medium"
                  href="/teachers/premium_hub/diagnostic_growth_report"
                >
                  View report
                </a>
                <img
                  alt=""
                  src="undefined/images/pages/administrator/overview/diagnostic-growth-report.svg"
                />
              </div>
            </div>
            <div
              class="tile new"
            >
              <div>
                <h3>
                  Data Export
                  <span
                    class="new-tag"
                  >
                    NEW
                  </span>
                </h3>
                <p>
                  Download a file containing all activities completed by students. Includes score, time spent, and more.
                </p>
              </div>
              <div
                class="link-and-image"
              >
                <a
                  class="quill-button focus-on-light outlined secondary medium"
                  href="/teachers/premium_hub/data_export"
                >
                  View report
                </a>
                <img
                  alt=""
                  src="undefined/images/pages/administrator/overview/data-export.svg"
                />
              </div>
            </div>
            <div
              class="tile "
            >
              <div>
                <h3>
                  Concepts Report
                </h3>
                <p>
                  View the number of times a student correctly or incorrectly used a targeted concept.
                </p>
              </div>
              <div
                class="link-and-image"
              >
                <a
                  class="quill-button focus-on-light outlined secondary medium"
                  href="/teachers/premium_hub/district_concept_reports"
                >
                  View report
                </a>
                <img
                  alt=""
                  src="undefined/images/pages/administrator/overview/concepts-report.svg"
                />
              </div>
            </div>
            <div
              class="tile "
            >
              <div>
                <h3>
                  Activity Scores Report
                </h3>
                <p>
                  View the overall average score for each student per class.
                </p>
              </div>
              <div
                class="link-and-image"
              >
                <a
                  class="quill-button focus-on-light outlined secondary medium"
                  href="/teachers/premium_hub/district_activity_scores"
                >
                  View report
                </a>
                <img
                  alt=""
                  src="undefined/images/pages/administrator/overview/activity-scores-report.svg"
                />
              </div>
            </div>
            <div
              class="tile "
            >
              <div>
                <h3>
                  Standards Report
                </h3>
                <p>
                  View a school’s overall progress on each of the Common Core standards.
                </p>
              </div>
              <div
                class="link-and-image"
              >
                <a
                  class="quill-button focus-on-light outlined secondary medium"
                  href="/teachers/premium_hub/district_standards_reports"
                >
                  View report
                </a>
                <img
                  alt=""
                  src="undefined/images/pages/administrator/overview/standards-report.svg"
                />
              </div>
            </div>
          </div>
        </div>
      </section>
      <section
        class="overview-section-wrapper integrations"
      >
        <h2>
          <img
            alt=""
            src="undefined/images/pages/administrator/overview/checkbox-multiple.svg"
          />
          <span>
            Integrations
          </span>
        </h2>
        <div
          class="overview-section"
        >
          <div
            class="overview-section-content"
          >
            <div
              class="tile"
            >
              <div>
                <h3>
                  Canvas
                </h3>
                <p>
                  Make teaching at your school even more effective with our seamless Canvas integration.
                </p>
              </div>
              <div
                class="link-and-image"
              >
                <a
                  class="quill-button focus-on-light outlined secondary medium"
                  href="/teachers/premium_hub/integrations/canvas"
                >
                  Learn more
                </a>
                <img
                  alt=""
                  src="undefined/images/pages/administrator/overview/canvas.svg"
                />
              </div>
            </div>
            <div
              class="tile"
            >
              <div>
                <h3>
                  Google Classroom
                </h3>
                <p>
                  Make teaching at your school even more effective with our seamless Google Classroom integration.
                </p>
              </div>
              <div
                class="link-and-image"
              >
                <a
                  class="quill-button focus-on-light outlined secondary medium"
                  href="/teachers/premium_hub/integrations/google"
                >
                  Learn more
                </a>
                <img
                  alt=""
                  src="undefined/images/pages/administrator/overview/google-classroom.svg"
                />
              </div>
            </div>
            <div
              class="tile"
            >
              <div>
                <h3>
                  Clever
                </h3>
                <p>
                  Make teaching at your school even more effective with our seamless Clever integration.
                </p>
              </div>
              <div
                class="link-and-image"
              >
                <a
                  class="quill-button focus-on-light outlined secondary medium"
                  href="/teachers/premium_hub/integrations/clever"
                >
                  Learn more
                </a>
                <img
                  alt=""
                  src="undefined/images/pages/administrator/overview/clever.svg"
                />
              </div>
            </div>
          </div>
        </div>
      </section>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Overview container should render with a restricted access type 1`] = `
<DocumentFragment>
  <div
    class="white-background-accommodate-footer premium-hub-overview"
  >
    <div
      class="container"
    >
      <div
        class="quill-snackbar "
      />
      <h1>
        Hello, A!
      </h1>
      <p
        class="subheader"
      >
        Thanks for being an admin of 
        <b>
          A Real Middle School
        </b>
        .
      </p>
      <section
        class="snapshot-section-wrapper overview-section-wrapper"
      >
        <h2>
          <img
            alt=""
            src="undefined/images/pages/administrator/overview/bulb.svg"
          />
          <span>
            Usage Highlights
          </span>
        </h2>
        <div
          class="snapshot-section highlights overview-section"
        >
          <div
            class="snapshot-section-content overview-section-content"
          >
            <div
              class="counts"
            >
              <section
                class="snapshot-item snapshot-count medium no-change"
              >
                <div
                  class="count-and-label"
                >
                  <span
                    class="count"
                  >
                    —
                  </span>
                  <span
                    class="snapshot-label"
                  >
                    Sentences written
                    <span
                      class="label-sub-text"
                    >
                      This school year
                    </span>
                  </span>
                </div>
                <div
                  class="change"
                >
                  <span />
                </div>
              </section>
              <section
                class="snapshot-item snapshot-count medium no-change"
              >
                <div
                  class="count-and-label"
                >
                  <span
                    class="count"
                  >
                    —
                  </span>
                  <span
                    class="snapshot-label"
                  >
                    Student learning hours
                    <span
                      class="label-sub-text"
                    >
                      This school year
                    </span>
                  </span>
                </div>
                <div
                  class="change"
                >
                  <span />
                </div>
              </section>
            </div>
          </div>
        </div>
      </section>
      <section
        class="overview-section-wrapper professional-development"
      >
        <h2>
          <img
            alt=""
            src="undefined/images/pages/administrator/overview/students.svg"
          />
          <span>
            Professional Development and Support
          </span>
        </h2>
        <div
          class="overview-section restricted-access"
        >
          <div
            class="professional-learning-manager"
          >
            <div>
              <h3>
                Implement literacy with fidelity
              </h3>
              <p
                class="section-subheader"
              >
                <img
                  alt=""
                  src="undefined/images/pages/administrator/overview/black-bulb.svg"
                />
                Premium Schools complete three times as many activities as free schools.
              </p>
              <p>
                With personalized learning, interactive activities, and immediate feedback, Quill Premium helps teachers foster literacy skills and critical thinking. If you’re interested in Quill Premium for your teachers, our sales team would love to connect with you.
              </p>
              <div
                class="buttons"
              >
                <a
                  class="quill-button contained primary medium focus-on-light"
                  href="https://calendly.com/alex-quill"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  Schedule a call
                </a>
                <a
                  class="quill-button contained primary medium focus-on-light"
                  href="https://www.quill.org/premium/request-district-quote"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  Request a quote
                </a>
              </div>
            </div>
            <img
              alt=""
              class="photos"
              src="undefined/images/pages/administrator/overview/alex-and-charlie.png"
            />
          </div>
          <div
            class="quick-links"
          >
            <h3>
              Quick Links
            </h3>
            <a
              href="https://support.quill.org/en/articles/1588988-how-do-i-navigate-the-premium-hub"
              rel="noopener noreferrer"
              target="_blank"
            >
              Premium Hub User Guide
            </a>
            <a
              href="https://docsend.com/view/9r6gzp5v8w5ky6w9"
              rel="noopener noreferrer"
              target="_blank"
            >
              Live Training Guide
            </a>
            <a
              href="/quill_academy"
              rel="noopener noreferrer"
              target="_blank"
            >
              Quill Academy
            </a>
            <a
              href="/teacher-center"
              rel="noopener noreferrer"
              target="_blank"
            >
              Teacher Center
            </a>
            <a
              href="mailto:support@quill.org"
              rel="noopener noreferrer"
              target="_blank"
            >
              Contact Support
            </a>
            <a
              href="https://quillorg.canny.io/admin-feedback"
              rel="noopener noreferrer"
              target="_blank"
            >
              Request a Feature
            </a>
          </div>
        </div>
      </section>
      <section
        class="overview-section-wrapper account-management"
      >
        <h2>
          <img
            alt=""
            src="undefined/images/pages/administrator/overview/pencil.svg"
          />
          <span>
            Account Management
          </span>
        </h2>
        <div
          class="overview-section"
        >
          <div
            class="overview-section-content"
          >
            <div
              class="tile"
            >
              <div>
                <h3>
                  Manage Accounts
                </h3>
                <p>
                  Create new accounts, manage admins, and more.
                </p>
              </div>
              <div
                class="link-and-image"
              >
                <a
                  class="quill-button focus-on-light outlined secondary medium"
                  href="/teachers/premium_hub/account_management"
                >
                  Manage accounts
                </a>
                <img
                  alt=""
                  src="undefined/images/pages/administrator/overview/manage-accounts.svg"
                />
              </div>
            </div>
            <div
              class="tile"
            >
              <div>
                <h3>
                  Log in as a teacher
                </h3>
                <p>
                  Access each teacher’s account to assign activities, manage rosters, and view data.
                </p>
              </div>
              <div
                class="link-and-image"
              >
                <button
                  class="quill-button focus-on-light outlined secondary medium"
                  type="button"
                >
                  Log in as a teacher
                </button>
                <img
                  alt=""
                  src="undefined/images/pages/administrator/overview/log-in-as-a-teacher.svg"
                />
              </div>
            </div>
            <div
              class="tile"
            >
              <div>
                <h3>
                  Manage Subscriptions
                </h3>
                <p>
                  View subscription history, manage subscriptions, and more.
                </p>
              </div>
              <div
                class="link-and-image"
              >
                <a
                  class="quill-button focus-on-light outlined secondary medium"
                  href="/teachers/premium_hub/school_subscriptions"
                >
                  Manage subscriptions
                </a>
                <img
                  alt=""
                  src="undefined/images/pages/administrator/overview/manage-subscriptions.svg"
                />
              </div>
            </div>
          </div>
        </div>
      </section>
      <section
        class="overview-section-wrapper premium-reports"
      >
        <h2>
          <img
            alt=""
            src="undefined/images/pages/administrator/overview/bar-graph-increasing-black.svg"
          />
          <span>
            Premium Reports
          </span>
        </h2>
        <div
          class="overview-section"
        >
          <div
            class="overview-section-content"
          >
            <div
              class="tile new"
            >
              <div>
                <h3>
                  Usage Snapshot Report
                  <span
                    class="new-tag"
                  >
                    NEW
                  </span>
                </h3>
                <p>
                  Key insights to help you succeed. View most assigned activities, average activities completed, and more.
                </p>
              </div>
              <div
                class="link-and-image"
              >
                <a
                  class="quill-button focus-on-light outlined secondary medium"
                  href="/teachers/premium_hub/usage_snapshot_report"
                >
                  View report
                </a>
                <img
                  alt=""
                  src="undefined/images/pages/administrator/overview/usage-snapshot-report.svg"
                />
              </div>
            </div>
            <div
              class="tile new"
            >
              <div>
                <h3>
                  Diagnostic Growth Report
                  <span
                    class="new-tag"
                  >
                    NEW
                  </span>
                </h3>
                <p>
                  Get a detailed breakdown of Quill’s impact on students’ growth. View data by skill, student, and more.
                </p>
              </div>
              <div
                class="link-and-image"
              >
                <a
                  class="quill-button focus-on-light outlined secondary medium"
                  href="/teachers/premium_hub/diagnostic_growth_report"
                >
                  View report
                </a>
                <img
                  alt=""
                  src="undefined/images/pages/administrator/overview/diagnostic-growth-report.svg"
                />
              </div>
            </div>
            <div
              class="tile new"
            >
              <div>
                <h3>
                  Data Export
                  <span
                    class="new-tag"
                  >
                    NEW
                  </span>
                </h3>
                <p>
                  Download a file containing all activities completed by students. Includes score, time spent, and more.
                </p>
              </div>
              <div
                class="link-and-image"
              >
                <a
                  class="quill-button focus-on-light outlined secondary medium"
                  href="/teachers/premium_hub/data_export"
                >
                  View report
                </a>
                <img
                  alt=""
                  src="undefined/images/pages/administrator/overview/data-export.svg"
                />
              </div>
            </div>
            <div
              class="tile "
            >
              <div>
                <h3>
                  Concepts Report
                </h3>
                <p>
                  View the number of times a student correctly or incorrectly used a targeted concept.
                </p>
              </div>
              <div
                class="link-and-image"
              >
                <a
                  class="quill-button focus-on-light outlined secondary medium"
                  href="/teachers/premium_hub/district_concept_reports"
                >
                  View report
                </a>
                <img
                  alt=""
                  src="undefined/images/pages/administrator/overview/concepts-report.svg"
                />
              </div>
            </div>
            <div
              class="tile "
            >
              <div>
                <h3>
                  Activity Scores Report
                </h3>
                <p>
                  View the overall average score for each student per class.
                </p>
              </div>
              <div
                class="link-and-image"
              >
                <a
                  class="quill-button focus-on-light outlined secondary medium"
                  href="/teachers/premium_hub/district_activity_scores"
                >
                  View report
                </a>
                <img
                  alt=""
                  src="undefined/images/pages/administrator/overview/activity-scores-report.svg"
                />
              </div>
            </div>
            <div
              class="tile "
            >
              <div>
                <h3>
                  Standards Report
                </h3>
                <p>
                  View a school’s overall progress on each of the Common Core standards.
                </p>
              </div>
              <div
                class="link-and-image"
              >
                <a
                  class="quill-button focus-on-light outlined secondary medium"
                  href="/teachers/premium_hub/district_standards_reports"
                >
                  View report
                </a>
                <img
                  alt=""
                  src="undefined/images/pages/administrator/overview/standards-report.svg"
                />
              </div>
            </div>
          </div>
        </div>
      </section>
      <section
        class="overview-section-wrapper integrations"
      >
        <h2>
          <img
            alt=""
            src="undefined/images/pages/administrator/overview/checkbox-multiple.svg"
          />
          <span>
            Integrations
          </span>
        </h2>
        <div
          class="overview-section"
        >
          <div
            class="overview-section-content"
          >
            <div
              class="tile"
            >
              <div>
                <h3>
                  Canvas
                </h3>
                <p>
                  Make teaching at your school even more effective with our seamless Canvas integration.
                </p>
              </div>
              <div
                class="link-and-image"
              >
                <a
                  class="quill-button focus-on-light outlined secondary medium"
                  href="/teachers/premium_hub/integrations/canvas"
                >
                  Learn more
                </a>
                <img
                  alt=""
                  src="undefined/images/pages/administrator/overview/canvas.svg"
                />
              </div>
            </div>
            <div
              class="tile"
            >
              <div>
                <h3>
                  Google Classroom
                </h3>
                <p>
                  Make teaching at your school even more effective with our seamless Google Classroom integration.
                </p>
              </div>
              <div
                class="link-and-image"
              >
                <a
                  class="quill-button focus-on-light outlined secondary medium"
                  href="/teachers/premium_hub/integrations/google"
                >
                  Learn more
                </a>
                <img
                  alt=""
                  src="undefined/images/pages/administrator/overview/google-classroom.svg"
                />
              </div>
            </div>
            <div
              class="tile"
            >
              <div>
                <h3>
                  Clever
                </h3>
                <p>
                  Make teaching at your school even more effective with our seamless Clever integration.
                </p>
              </div>
              <div
                class="link-and-image"
              >
                <a
                  class="quill-button focus-on-light outlined secondary medium"
                  href="/teachers/premium_hub/integrations/clever"
                >
                  Learn more
                </a>
                <img
                  alt=""
                  src="undefined/images/pages/administrator/overview/clever.svg"
                />
              </div>
            </div>
          </div>
        </div>
      </section>
    </div>
  </div>
</DocumentFragment>
`;
